# unfoldings

./: .gitignore  CMakeLists.txt  README.md
JUCE/Projucer.app/Contents/: CodeResources  Info.plist
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
